[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/arkaplan.png" type="Texture" id=1]
[ext_resource path="res://Sprites/baslik.png" type="Texture" id=2]
[ext_resource path="res://Scripts/IntroScreen.gd" type="Script" id=3]
[ext_resource path="res://SFX/intro_boss.ogg" type="AudioStream" id=4]
[ext_resource path="res://Sprites/ArcherICON.png" type="Texture" id=5]
[ext_resource path="res://Sprites/WarriorICON.png" type="Texture" id=6]

[sub_resource type="Animation" id=1]
resource_name = "background_color"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.839216, 0.215686, 0.215686, 1 ), Color( 0.486275, 0.0156863, 0.0156863, 1 ), Color( 0.839216, 0.215686, 0.215686, 1 ) ]
}

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D/keepaway:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.3 ), Vector2( 0.33, 0.33 ), Vector2( 0.3, 0.3 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "background_color"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.839216, 0.215686, 0.215686, 1 ), Color( 0.415686, 0.0313726, 0.0313726, 1 ), Color( 0.839216, 0.215686, 0.215686, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "camera_move"
length = 20.0
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 10, 20 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -70, 13 ), Vector2( 69.9274, 10.7007 ), Vector2( -70, 13 ) ]
}

[node name="IntroScreen" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.839216, 0.215686, 0.215686, 1 )
scale = Vector2( 2.1, 2 )
texture = ExtResource( 1 )

[node name="keepaway_bounce" type="AnimationPlayer" parent="."]
anims/background_color = SubResource( 1 )
anims/keepaway_bounce = SubResource( 2 )

[node name="background_color" type="AnimationPlayer" parent="."]
anims/background_color = SubResource( 3 )

[node name="camera_move" type="AnimationPlayer" parent="."]
anims/camera_move = SubResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -70, 13 )
offset = Vector2( 0, -0.5 )
current = true
zoom = Vector2( 0.9, 0.9 )

[node name="keepaway" type="Sprite" parent="Camera2D"]
position = Vector2( 0, -10 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="Warrior" type="TouchScreenButton" parent="Camera2D"]
position = Vector2( 21.21, 2.87231 )
normal = ExtResource( 6 )

[node name="Archer" type="TouchScreenButton" parent="Camera2D"]
position = Vector2( -49.1663, 2.87231 )
normal = ExtResource( 5 )

[node name="introMusic" type="AudioStreamPlayer2D" parent="Camera2D"]
position = Vector2( -0.0773697, -10.2338 )
stream = ExtResource( 4 )
autoplay = true
[connection signal="animation_finished" from="keepaway_bounce" to="." method="_on_keepaway_bounce_animation_finished"]
[connection signal="animation_finished" from="background_color" to="." method="_on_background_color_animation_finished"]
[connection signal="animation_finished" from="camera_move" to="." method="_on_camera_move_animation_finished"]
[connection signal="pressed" from="Camera2D/Warrior" to="." method="_on_Warrior_pressed"]
[connection signal="pressed" from="Camera2D/Archer" to="." method="_on_Archer_pressed"]
